# smm_control

./: CMakeLists.txt  controller_plugins.xml  package.xml
cfg/: IdoscGain.cfg
config/plots/: torques.mpl
config/yaml/: smm_ros_gazebo_idosc.yaml
config/yaml/fasmc/: fixed_params.yaml
config/yaml/gains/: idosc_gain_limits.yaml
config/yaml/hridosc/: fixed_params.yaml
config/yaml/ikp_test/: ikp_test1.yaml  ikp_test_data1.yaml
config/yaml/paths/: cspace_goal.yaml  cspace_path_reid16.yaml  impedance_goal.yaml  path_reid16.yaml  tspace_goal.yaml
config/yaml/ric/: adaptive_params.yaml  dynamic_uncertainty.yaml  impedance_params.yaml  wrench_params.yaml
config/yaml/ridosc/: adaptive_params.yaml  dynamic_uncertainty.yaml  fixed_params.yaml  fixed_params_full.yaml
include/smm_control/: idosc.h  timing.h
launch/: fasmc_data_monitor.launch  fasmc_simple.launch  hridosc_data_monitor.launch  hridosc_gazebo_settings.launch  hridosc_simple.launch  hridosc_visualization_simple.launch  idosc_data_monitor.launch  idosc_gazebo_settings.launch  idosc_simple.launch  kdl_ikp_test.launch  ric_data_monitor.launch  ric_gazebo_settings.launch  ric_simple.launch  ridosc_data_monitor.launch  ridosc_simple.launch  ridosc_visualization_simple.launch  smm_idosc.launch  smm_stabilize.launch  uridosc_data_monitor.launch  uridosc_simple.launch
msg/: CustomJointState.msg  CustomTcpState.msg  FasmcAdaptiveParams.msg  FasmcError.msg  FasmcFuzzyParams.msg  IdoscControlOutput.msg  IdoscCurrent.msg  IdoscDesired.msg  IdoscError.msg  IdoscGainMatrices.msg  IdoscTorques.msg  RidoscAdaptiveParams.msg  RobotTorques.msg
rosbags/test/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/full_fixed_par_Hhz_dampfr_1/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_fuzzy_params.bag  fasmc_torques.bag
rosbags/test/full_fixed_par_Hhz_dampfr_2/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/full_fixed_param_Hhz_1/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/joint13_no_dist_fixed_params/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/joint13_no_dist_fixed_params_Hhz/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/joint2_no_dist_fixed_param_Hhz/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test/joint3_no_dist/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_torques.bag  (+3 more)
rosbags/test_hridosc_1/: hridosc_adaptive_params.bag  hridosc_dyn_torques.bag  hridosc_torques.bag
rosbags/test_ric_1/: ri_slide_surf.bag  ric_adaptive_params.bag  ric_dyn_torques.bag  ric_error_state.bag  ric_ext_wrench.bag  ric_imp_accel.bag  ric_imp_torques.bag  ric_inv_lambda_norm.bag  ric_lambda_cond_num.bag  ric_smc_torques.bag  ric_torques.bag
rosbags/test_ridosc_1/: ridosc_adaptive_params.bag  ridosc_dyn_torques.bag  ridosc_error_state.bag  ridosc_slide_surf.bag  ridosc_smc_torques.bag  ridosc_torques.bag
rosbags/test_ridosc_2/: ridosc_adaptive_params.bag  ridosc_dyn_torques.bag  ridosc_slide_surf.bag  ridosc_smc_torques.bag  ridosc_torques.bag
rosbags/test_traj/: fasmc_adaptive_params.bag  fasmc_dyn_torques.bag  fasmc_error_state.bag  fasmc_fuzzy_params.bag  fasmc_slide_surf.bag  fasmc_smc_torques.bag  fasmc_torques.bag
rosbags/test_uridosc_1/: ri_slide_surf.bag  ric_adaptive_params.bag  ric_dyn_torques.bag  ric_error_state.bag  ric_imp_torques.bag  ric_inv_lambda_norm.bag  ric_lambda_cond_num.bag  ric_smc_torques.bag  ric_torques.bag  uridosc_adaptive_params.bag  uridosc_dyn_torques.bag  uridosc_inv_lambda_norm.bag  uridosc_lambda_cond_num.bag  uridosc_slide_surf.bag  uridosc_smc_torques.bag  uridosc_torques.bag
rosbags/uridosc_2_14_1_25/: uridosc_adaptive_params.bag  uridosc_dyn_torques.bag  uridosc_inv_lambda_norm.bag  uridosc_lambda_cond_num.bag  uridosc_slide_surf.bag  uridosc_smc_torques.bag  uridosc_torques.bag
rviz/: kdl_ikp_visualization.rviz  robot_visualization.rviz
src/: example_idosc.cpp  ext_force_torque_publisher.cpp  ext_wrench_publisher_time.cpp  idosc.cpp  initialize_robot_shared.cpp  num_ikp1.cpp  publishCartesianPathLoop_idosc_simple.cpp  publishCartesianPath_idosc_simple.cpp  publishJointPathLoop_fasmc_simple.cpp  publishSingleJointGoal.cpp  publishSingleTcpGoal.cpp  publish_single_joint_state.cpp  robot_effort_publisher.cpp  robot_torque_command_publisher.cpp  serverImpedanceDynamics.cpp  serverOperationalSpaceDynamics.cpp  serverOperationalSpaceMatrices.cpp  serverRobotDynamics.cpp  serverRobotDynamicsKDL.cpp  serverSpatialJacobians.cpp  serverTcpStateTfNum.cpp  serverToolJacobians.cpp  serverUncertainImpedanceDynamics.cpp  serverUncertainOperationalSpaceMatrices.cpp  stabilizeRobot.cpp  temp  test_smm_kdl_ikp.cpp  updateCartesianState_idosc_simple.cpp  updateCartesianState_ridosc_simple.cpp  updateControlOutput_idosc_simple.cpp  updateDesiredState_ridosc_simple.cpp  updateDtLambda.cpp  updateDtToolJacobian.cpp  updateDynamicsTorque_fasmc_simple.cpp  updateDynamicsTorque_ric_simple.cpp  updateDynamicsTorque_ridosc_simple.cpp  updateErrorState_fasmc_simple.cpp  updateErrorState_idosc_simple.cpp  updateErrorState_ridosc_simple.cpp  updateFuzzyParams_fasmc_simple.cpp  (+28 more)
srv/: GetDynamics.srv  GetImpedanceDynamics.srv  GetJacobians.srv  GetOperationalSpaceDynamics.srv  GetOperationalSpaceMatrices.srv  GetSpatialJacobians.srv  GetTcpStateTfNum.srv  GetUncertaintyDynamics.srv  GetUncertaintyImpedanceDynamics.srv
